css/app.css
/* ... */
#index .contact-form {
  padding: 2.5rem 0;
}

#index .contact-form .section-title h2,
#index .contact-form .section-title h3,
#index .contact-form .section-title form#index-contact-form .contact-form-input-group-button input, form#index-contact-form .contact-form-input-group-button
#index .contact-form .section-title input {
  color: #fff;
  text-shadow: -0.125rem 0.1875rem 0 rgba(0, 0, 0, 0.45);
}

form#index-contact-form .contact-form-input-group-button {
  padding-top: 2.5rem;
}

form#index-contact-form .contact-form-input-group-button input {
  background: #566372;
  box-shadow: -0.25rem 0.25rem 0 0 rgba(141, 149, 158, 0.5);
  border-radius: 0.125rem;
  margin-bottom: 0.125rem;
  color: #fff;
  min-width: 11.25rem;
  padding: 0.5rem 0;
  line-height: 1;
}

@media screen and (min-width: 64em) {
  form#index-contact-form .contact-form-input-group-button input {
    min-width: 0;
    width: 90%;
  }
}

form#index-contact-form .contact-form-input-group-button input:hover {
  margin-top: 0.125rem;
  margin-right: 0.125rem;
  margin-bottom: 0;
  box-shadow: -0.125rem 0.125rem 0 0 rgba(141, 149, 158, 0.5);
}

form#index-contact-form span.input-group-label.error {
  background: #F26B6C;
  font-weight: bold;
  color: #fff;
  border: 1px solid #fff;
}

.recent-projects-modal {
  width: 100%;
  background: none;
}

.recent-projects-modal:focus {
  outline: none;
}

.recent-projects-modal .modal-container {
  background: #F4F4F4;
  padding: 0;
}

.recent-projects-modal .modal-header {
  background: #fff;
  padding: 1.5625rem 2.1875rem 1.5625rem 0.9375rem;
}

.recent-projects-modal .modal-header * {
  margin: 0;
}

.recent-projects-modal .modal-prose {
  padding: 1.5625rem 0.9375rem;
}

.recent-projects-modal .modal-prose .modal-site-link {
  border-radius: 0.125rem;
  box-shadow: -0.25rem 0.25rem 0 0 rgba(141, 149, 158, 0.5);
  background: #566372;
  font-size: 1rem;
}

.recent-projects-modal .modal-prose .modal-site-link:hover {
  margin-top: 0.125rem;
  margin-right: 0.125rem;
  margin-bottom: 0.875rem;
  box-shadow: -0.125rem 0.125rem 0 0 rgba(141, 149, 158, 0.5);
}

.recent-projects-modal .modal-images {
  overflow: hidden;
}

@media screen and (min-width: 40em) {
  .recent-projects-modal {
    padding-bottom: 0.9375rem;
  }
  .recent-projects-modal .modal-container {
    border-radius: 0.25rem;
    box-shadow: -0.375rem 0.5rem 0 0 rgba(86, 99, 113, 0.5);
  }
  .recent-projects-modal .modal-header {
    border-radius: 0.25rem 0.25rem 0 0;
  }
  .recent-projects-modal .modal-images {
    border-radius: 0 0 0.25rem 0.25rem;
  }
}

.recent-projects-modal#essential-sound-production-project .modal-images {
  background: #fff;
}

.recent-projects-modal#essential-sound-production-project .modal-images .image-1 {
  padding: 0 1rem;
}

.recent-projects-modal#essential-sound-production-project .modal-images .image-3 img {
  width: 100%;
}

@media screen and (min-width: 40em) {
  .recent-projects-modal#essential-sound-production-project .modal-images {
    position: relative;
  }
  .recent-projects-modal#essential-sound-production-project .modal-images .image-1 {
    padding: 0.25rem 0;
  }
  .recent-projects-modal#essential-sound-production-project .modal-images .image-2 img {
    width: 100%;
  }
  .recent-projects-modal#essential-sound-production-project .modal-images .image-3 img {
    position: absolute;
    height: 100%;
    width: auto;
  }
}

.reveal#thank-you {
  padding: 1rem;
}

#index footer {
  margin-top: 2.5rem;
  border-top: 0.1875rem solid #5a5a5a;
  background: rgba(110, 110, 110, 0.8);
  padding: 5rem 0;
}

#index footer * {
  color: #fff;
}

#index footer .social-icons {
  padding-top: 2.5rem;
}

@media screen and (min-width: 64em) {
  #index footer .social-icons {
    padding-top: 0;
  }
}

#index .bubble-bg {
  background: #fff url("/img/index/bubble-bg/bubble-background.png") center center/cover no-repeat;
}

.projectCard {
  position: relative;
  color: #fff;
  margin: 0 0 1.25rem;
}

.projectCard-info {
  padding: 10% 0 0;
  position: absolute;
  width: 100%;
  background: rgba(68, 68, 68, 0.75);
  height: 100%;
  opacity: 0;
}

.projectCard-info:hover {
  opacity: 1;
}

.projectCard-info .prose {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  padding: 0 0.625rem;
  width: 100%;
}

.projectCard-info .prose * {
  margin: 0;
}

@media screen and (max-width: 47.5em) {
  .projectCard-info h3, .projectCard-info form#index-contact-form .contact-form-input-group-button input, form#index-contact-form .contact-form-input-group-button .projectCard-info input {
    font-size: 1.75rem;
  }
}

.projectCard-info a {
  padding: 0.875rem 1.25rem;
  border-radius: 0.125rem;
  border: 0.0625rem solid #f4f4f4;
  background: #f4f4f4;
  font-size: 16px;
  transition: none;
  color: #222;
}

.projectCard-info a:hover {
  background: #566372;
  border: 0.0625rem solid #fff;
  border-radius: 0.125rem;
  color: #fff;
}

@media screen and (min-width: 47.5em) {
  .projectCard-info a {
    padding: 0.875rem 2.1875rem;
  }
}

@media screen and (max-width: 47.5em) {
  .projectCard-info a.long-word {
    font-size: 0.875rem;
  }
}

.projectCard-image {
  border: 0.1875rem solid #566372;
}

#index {
  background: #F4F4F4;
}

#index header {
  height: 28.75rem;
  position: relative;
  background: #fff url("/img/index/header/1-small/small.jpg") left top/cover no-repeat;
}

@media screen and (min-width: 40em) {
  #index header {
    height: 37.5rem;
    background-image: url("/img/index/header/2-medium/medium.jpg");
  }
}

@media only screen and (min-width: 64.063em) {
  #index header {
    background-image: url("/img/index/header/3-min-1025/large.jpg");
  }
}

@media only screen and (min-width: 90.063em) {
  #index header {
    background-image: url("/img/index/header/4-min-1441/max.jpg");
  }
}

#index header .absolute-wrapper {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  width: 100%;
  z-index: 5;
}
/* ... */

